fixed search results click functionality. also got UV index search results working. next up: need to add some fun icons, and put the color code behind the uv index.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 p {
     font-size: 35px;
     font-family: 'Do Hyeon', sans-serif;
+   
 }
 
 #search-button {
@@ -71,6 +72,7 @@ p span {
     color: white;
     padding: 10px;
     border-radius: 20px;
+    border: 3px solid cornflowerblue;
 }
 
 body{
